--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,6 @@
       "@/server/*": ["./server/*"]
     }
   },
-  "include": ["src", "server"],
+  "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
