--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "dev:client": "vite",
     "dev:server": "tsx watch server/index.ts",
     "build": "tsc && vite build",
+    "build:server": "tsc server/index.ts --outDir dist-server",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node dist-server/index.js",
+    "start:dev": "tsx server/index.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
